--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <li>
       <a href="data/json_demo.json" target="_blank">JSON Demo File to emulate an API access</a>
     </li>
+    <li>
+      <a href="data/dataframe_demo.json" target="_blank">Dataframe Demo JSON to emulate an API access</a>   
+    </li>
+    <li>
+      <a href="data/json_demo.json" target="_blank">JSON Demo File to emulate an API access</a>
+    </li>
   </ul>
+  see also [README.md](https://www.github.com/niebert/data4api) of this repository.
  </body>
 </html>
