--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <a href="data/json_demo.json" target="_blank">JSON Demo File to emulate an API access</a>
     </li>
   </ul>
-  see also [README.md](https://www.github.com/niebert/data4api) of this repository.
+  see also <a href="https://www.github.com/niebert/data4api" target="_blank">README.md</a> of this repository.
  </body>
 </html>
